@@ -1,3 +1,8 @@
+2006-12-22  Gavin Romig-Koch  <gavin@redhat.com>
+
+	* nis/nss_compat/compat-grp.c (internal_getgrgid_r): Don't
+	blacklist the group till after we look it up.
+
 2006-12-21  Ulrich Drepper  <drepper@redhat.com>
 
 	* include/atomic.h (atomic_forced_read): New macro.
